--- a/bib_dl2.bib
+++ b/bib_dl2.bib
@@ -83,12 +83,13 @@
   Volume                   = {3},
 
   __markedentry            = {[tom:6]},
+  File                     = {article:Bach_03_KICA.pdf:PDF},
   Owner                    = {tom},
   Publisher                = {JMLR. org},
   Timestamp                = {2015.03.09}
 }
 
-@Article{Bruna_13_scat,
+@Article{Bruna_13_scattering,
   Title                    = {Invariant scattering convolution networks},
   Author                   = {Bruna, Joan and Mallat, St{\'e}phane},
   Journal                  = {Pattern Analysis and Machine Intelligence, IEEE Transactions on},
@@ -98,6 +99,7 @@
   Volume                   = {35},
 
   __markedentry            = {[tom:6]},
+  File                     = {article:Bruna_13_scattering.pdf:PDF},
   Owner                    = {tom},
   Publisher                = {IEEE},
   Timestamp                = {2015.03.09}
@@ -249,21 +251,7 @@ rank},
   Timestamp                = {2015.03.09}
 }
 
-@InProceedings{Hyvarinen1999,
-  Title                    = {Fast ICA for noisy data using Gaussian moments},
-  Author                   = {Hyvarinen, Aapo},
-  Booktitle                = {Circuits and Systems, 1999. ISCAS'99. Proceedings of the 1999 IEEE International Symposium on},
-  Year                     = {1999},
-  Organization             = {IEEE},
-  Pages                    = {57--61},
-  Volume                   = {5},
-
-  __markedentry            = {[tom:6]},
-  Owner                    = {tom},
-  Timestamp                = {2015.03.09}
-}
-
-@Article{Hyvarinen1999a,
+@Article{Hyvarinen_99_FastICA,
   Title                    = {Fast and robust fixed-point algorithms for independent component analysis},
   Author                   = {Hyvarinen, Aapo},
   Journal                  = {Neural Networks, IEEE Transactions on},
@@ -273,8 +261,25 @@ rank},
   Volume                   = {10},
 
   __markedentry            = {[tom:6]},
+  File                     = {article:Hyvarinen_99_FastICA.pdf:PDF},
+  Keywords                 = {algorithm; ICA},
   Owner                    = {tom},
   Publisher                = {IEEE},
+  Timestamp                = {2015.03.09}
+}
+
+@InProceedings{Hyvarinen_99_FastICA_b,
+  Title                    = {Fast ICA for noisy data using Gaussian moments},
+  Author                   = {Hyvarinen, Aapo},
+  Booktitle                = {Circuits and Systems, 1999. ISCAS'99. Proceedings of the 1999 IEEE International Symposium on},
+  Year                     = {1999},
+  Organization             = {IEEE},
+  Pages                    = {57--61},
+  Volume                   = {5},
+
+  __markedentry            = {[tom:6]},
+  File                     = {article:Hyvarinen_99_FastICA_b.pdf:PDF},
+  Owner                    = {tom},
   Timestamp                = {2015.03.09}
 }
 
@@ -298,6 +303,7 @@ rank},
 
   __markedentry            = {[tom:6]},
   File                     = {Lee_06_coding.pdf:Lee_06_coding.pdf:PDF},
+  Keywords                 = {Algorithm; Sparse Coding},
   Owner                    = {tom},
   Timestamp                = {2015.03.09}
 }
@@ -341,7 +347,7 @@ rank},
   Timestamp                = {2015.03.09}
 }
 
-@Article{Mallat1993,
+@Article{Mallat_93_MP,
   Title                    = {Matching pursuits with time-frequency dictionaries},
   Author                   = {Mallat, St{\'e}phane G and Zhang, Zhifeng},
   Journal                  = {Signal Processing, IEEE Transactions on},
@@ -351,9 +357,8 @@ rank},
   Volume                   = {41},
 
   __markedentry            = {[tom:6]},
-  Keywords                 = {matching pursuit
-dictionary
-time-frequency},
+  File                     = {article:Mallat_93_MP.pdf:PDF},
+  Keywords                 = {Matching Pursuit; Sparse Coding},
   Owner                    = {tom},
   Publisher                = {IEEE},
   Timestamp                = {2015.03.09}
@@ -389,7 +394,7 @@ time-frequency},
   Timestamp                = {2015.03.09}
 }
 
-@Article{Pratt1969,
+@Article{Pratt_69_hadamard,
   Title                    = {Hadamard transform image coding},
   Author                   = {Pratt, William and Kane, Julius and Andrews, Harry C},
   Journal                  = {Proceedings of the IEEE},
@@ -399,6 +404,7 @@ time-frequency},
   Volume                   = {57},
 
   __markedentry            = {[tom:6]},
+  File                     = {article:Pratt_69_hadamard.pdf:PDF},
   Owner                    = {tom},
   Publisher                = {IEEE},
   Timestamp                = {2015.03.09}
@@ -418,6 +424,7 @@ time-frequency},
   Series                   = {ICML '12},
 
   __markedentry            = {[tom:6]},
+  File                     = {article:Savalle_12_sparse.pdf:PDF},
   ISBN                     = {978-1-4503-1285-1},
   Location                 = {Edinburgh, Scotland, GB},
   Owner                    = {tom}
@@ -432,6 +439,7 @@ time-frequency},
   __markedentry            = {[tom:6]},
   File                     = {techreport:Rubinstein_08_KSVD.pdf:PDF},
   Journal                  = {CS Technion},
+  Keywords                 = {Algorithm; K-SVD},
   Owner                    = {tom},
   Pages                    = {40},
   Timestamp                = {2015.03.09}
