--- a/bib_dl2.bib
+++ b/bib_dl2.bib
@@ -364,6 +364,18 @@ rank},
   Timestamp                = {2015.03.09}
 }
 
+@InProceedings{Mauer_13_multitask,
+  Title                    = {Sparse coding for multitask and transfer learning},
+  Author                   = {Maurer, Andreas and Pontil, Massi and Romera-Paredes, Bernardino},
+  Booktitle                = {Proceedings of the 30th International Conference on Machine Learning (ICML)},
+  Year                     = {2013},
+  Pages                    = {343--351},
+
+  File                     = {article:Mauer_13_multitask.pdf:PDF},
+  Owner                    = {tom},
+  Timestamp                = {2015.03.12}
+}
+
 @Article{Naik_11_ICA,
   Title                    = {An overview of independent component analysis and its applications},
   Author                   = {Naik, Ganesh R and Kumar, Dinesh Kant},
