--- a/grouping.tex
+++ b/grouping.tex
@@ -352,6 +352,16 @@ Pour les similarités déjà documentées (GG1, GG2, HG, KM), ces valeurs sont c
 
 %TODO analyse des résultats!!!!
 
+
+%1/ un exemple
+La Figure~\ref{fig:dec} présente un résultat de décomposition par la SSA d'un signal de la classe 3 composé d'une tendance, de 4 harmoniques exponentiellement modulées et d'un bruit blanc gaussien.
+Le SNR de ce signal est de 9.7dB.
+La décomposition  avec un grouping (HG)-(MH) permet de mettre en évidence 4 des 5 composantes.
+Les composantes sont retrouvées avec une faible déformation. 
+Le coefficient de détermination $R^2$ moyen est de 0.96 pour ces 4 composantes alors que sans le groupement, le coefficient moyen est de 0.21.
+La 5e composante harmonique est rejetée comme du bruit par le filtrage des composantes initiales car son amplitude est faible par rapport aux autres composantes.
+Il est en effet difficile de retrouver les composantes avec une amplitude faible devant le bruit.
+
 %2/ Toutes les classes
 
 Pour chacune des 3 classes, on génère 1000 signaux aléatoires.
@@ -362,27 +372,26 @@ Elle permet d'obtenir une amélioration moyenne de $P_r$ de 27.78\%.
 
 %3/ Classes par classes
 Lorsqu'on regarde les résultats classe par classe, on voit cependant que lorsque la complexité de la classe augmente, les différences sont de moins en moins significatives entre (HG)-(MH) et les autres méthodes.
-Pour $R_r$, (HG)-(MH) est statistiquement meilleure que (HGS)-(MH) pour les classes 1 et 2 mais pas pour la classe 3.
-Pour $P_r$, sur chaque classe séparément, 5 méthodes ont des performances comparables et (HGS)-(MH) a un rang plus élevé que (HG)-(MH) pour la classe 3.
-Ceci montre que si la méthode (HG)-(MH) semble la plus appropriée pour le groupement automatique pour des signaux composés d'harmoniques modulées, les autres méthodes peuvent donner des résultats intéressants pour des signaux plus complexes.
+Pour $R_r$, (HG)-(MH) est statistiquement meilleure que (HGS)-(MU) pour les classes 1 et 2 mais pas pour la classe 3.
+Pour $P_r$, sur chaque classe séparément, 5 méthodes ont des performances comparables bien que (HG)-(MH) donne un meilleur performance moyenne et  pour la classe 3, (HGS)-(MU) a une meilleure précision que (HG)-(MH).
+Ceci montre que si la méthode (HG)-(MH) semble la plus appropriée pour le groupement automatique pour des signaux composés d'harmoniques modulées, les autres méthodes peuvent donner des résultats intéressants pour des signaux avec des périodogrammes moins compactes.
 
 
-%1/ un exemple
-La Figure~\ref{fig:dec} présente un résultat de décomposition par la SSA d'un signal de la classe 3 composé d'une tendance, de 4 harmoniques modulées et d'un bruit blanc gaussien. Le SNR de ce signal est de 9.7dB. La décomposition  avec un grouping (HG)-(MH) permet de mettre en évidence 4 des 5 composantes. Les composantes sont retrouvées avec une faible déformation. Le coefficient de détermination $R^2$ moyen est de 0.96 pour ces 4 composantes alors que sans le groupement, le coefficient moyen est de 0.21. La 5e composante harmonique est rejetée comme du bruit par le filtrage des composantes initiales car son amplitude est faible par rapport aux autres composantes. Il est en effet difficile de retrouver les composantes avec une amplitude faible devant le bruit.
 
 %5/ Par composantes
-Le coefficient de determination $R^2$ obtenue
+Cette analyse est étayée par l'étude des résultats pour chaque composantes.
+Le coefficient de détermination $R^2$ moyen obtenue pour la composante $c_0$ dans les classes 2 et 3 est en probabilité plus grand avec la méthode (KM) que pour les 10 autre méthodes (cette méthode ne varie pas avec le choix de la stratégie de formation des groupes). 
+Cette méthode observe l'intégralité du contenu fréquentiel pour effectuer le groupement ce qui est un avantage pour retrouver la composante de tendance qui peut avoir un périodogramme plus étalées. 
+Pour les composantes harmoniques dans les classes 1 et 2, la méthode (HG)-(MH) donne statistiquement un meilleur score $R^2$. 
+Ces composantes sont particulièrement adaptées à la similarité (HG) car elles ont un périodogramme ne comportant qu'un pic.
+Pour les composantes exponentiellement modulées, (HG)-(MH) et (HGS)-(MU) donnent des résultats statistiquement équivalents. Ce rapprochement s'explique car sur les cas difficiles, (HGS)-(MU) donne une plus grand stabilité au support spectral des composantes et permet un meilleur regroupement. Les harmoniques faiblement modulées sont tout de même mieux récupéré par la première technique.
 
 %4/ Méthode par méthode
 
 
 \section{Conclusion}
 \label{sec:ccl}
-bla
-
-bla
-
-bla
+Le cadre général introduit pour la comparaison des stratégie de regroupement permet de voir que la stratégie (HG)-(MH) est la plus adaptée à l'extraction de signaux harmonique
 
 % section ccl (end)
 
